Changes proposed for 73457 slow down Kraken json-parse-financial https://bugs.webkit.org/show_bug.cgi?id=73584

Restructured StringImpl::equal to take advantage of 8 or 4 bytes
at a time when possible.

This is worth ~3% on Kraken json-parse-financial. It provides
~2% on SunSpider string-unpack-code.

Reviewed by Sam Weinig.

* wtf/text/StringImpl.cpp:
(WTF::equal):


Canonical link: https://commits.webkit.org/90218@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@101747 268f45cc-cd09-0410-ab3c-d52691b4dbfc